quick fix for sticky navigation on smaller viewports

--- a/_sass/_parallax.scss
+++ b/_sass/_parallax.scss
@@ -4,6 +4,13 @@
   overflow-y: auto;
   -webkit-perspective: 1px;
   perspective: 1px;
+  padding-top: 87px;
+  @media screen and (min-width: 22.5em) {
+    padding-top: 58px;
+  }
+  @media screen and (min-width: 42.8125em) {
+    padding-top: 37px;
+  }
 }
 
 .parallax__layer {
